# CodeCGC

./: .gitignore  .mcp.json  .npmignore  CHANGELOG.md  INSTALLATION.md  LICENSE  README.md  SECURITY.md  biome.json  model-routing.yaml  package-lock.json  package.json  pytest.ini  requirements-dev.txt
.claude/: CLAUDE.md  settings.json  settings.local.json
.github/: CODEOWNERS
codecgcmcp/: README.md
docs/: codecgc-functional-design.md
geminimcp/: README.md
mcp/codecgcmcp/: pyproject.toml
mcp/codecgcmcp/src/codecgcmcp/: __init__.py  cli.py  server.py
scripts/: README-codecgc-cli.md  audit_codecgc_external_capabilities.py  audit_codecgc_historical_audits.py  audit_codecgc_lifecycle.py  audit_codecgc_package_runtime.py  audit_codecgc_release_readiness.py  audit_codecgc_review_policy.py  audit_codecgc_workflow_history.py  build_codecgc_task.py  codecgc_artifact_roots.py  codecgc_cli.py  codecgc_command_surface.py  codecgc_console_io.py  codecgc_executor_registry.py  codecgc_file_evidence.py  codecgc_flow_control.py  codecgc_governance_dedupe.py  codecgc_path_contract.py  codecgc_plan_decision.py  codecgc_policy.py  codecgc_review_control.py  codecgc_roadmap_templates.py  codecgc_routing_paths.py  codecgc_routing_template.py  codecgc_runtime_paths.py  codecgc_session_recovery.py  codecgc_step_control.py  codecgc_workflow_runtime.py  codecgc_workflow_templates.py  entry_codecgc_workflow.py  exercise_mcp_tools.py  expand_codecgc_roadmap.py  init_codecgc_roadmap.py  init_codecgc_workflow.py  install_codecgc.py  migrate_demo_workflows_to_fixtures.py  (+26 more)
skills/: cgc.md  (+15 more)
(+390 files in other folders)
